<resources>
    <string name="app_name">Spinner</string>

    <string name="login">Login</string>
    <string name="confirm">CONFIRM</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="submit_btn">Submit</string>
    <string name="login_name">Name: </string>
    <string name="login_id">ID: </string>
    <string name="login_admin">Admin: </string>
    <string name="login_location">Location: </string>
    <string name="login_name_hint">John Doe</string>
    <string name="login_id_hint">JD123</string>
    <string name="login_location_hint">George Mason University</string>
    <string name="login_note">Please enter the e-mail address you used to register.
        Remember this is the e-mail address that will be used to pay you</string>
    <string name="login_validate_error">Please fill out all fields</string>
    <string name="cancel_btn">Cancel</string>
    <string name="no_checks">Please select a spinner</string>
    <string name="confirm_wheel_msg">Are you sure?</string>
    <string name="confirm_wheel_msg_practice">Done playing?</string>
    <string name="confirm_wheel_msg_practice2">Do you want to continue and start the tasks or continue practicing?</string>
    <string name="confirm_wheel_msg_practice_yes">Yes, start tasks</string>
    <string name="confirm_wheel_msg_practice_cancel">No, practice more</string>
    <string name="yes_confirm">Yes</string>
    <string name="left_score">Outcome: %1$s</string>
    <string name="right_score">Outcome: %1$s</string>
    <string name="confirm_list_sel">Continue to final game?</string>
    <string name="spin_btn">SPIN</string>
    <string name="select_btn">Select Wheel</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="practice_instructions_single">Play with the Spinner (by clicking the SPIN button)! Click CONTINUE when done.</string>
    <string name="practice_instructions_double">Now there are two spinners. Play with them and choose the spinner you like.</string>
    <string name="checkbox_instruction">TAP TO SELECT</string>
    <string name="choose_random_btn">CHOOSE RANDOM</string>
    <string name="summary_screen_title">Summary of Decisions</string>
    <string name="start_task_text">Now, choose spinners for real</string>
    <string name="questionnaire_alert">Please fill out all fields</string>
    <string name="answer_hint">Type answer here</string>
    <string name="complete_msg">Thank you for playing! Your payoff is: %1$d</string>
    <string name="finish_btn">FINISH</string>
    <string name="final_game_title">Game to be paid</string>
    <string name="close_alert_btn">OKAY</string>
    <string name="radio_hint">Add answer here</string>
    <string name="questionnaire_confirm_msg">Did you answer everything?</string>
    <string name="questionnaire_done">Done</string>

</resources>
