<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        android:textSize="30sp"
        android:id="@+id/submit_btn"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="45sp"
        android:id="@+id/loginText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/nameEntryRow"
        android:layout_below="@+id/noteTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_name"
            android:id="@+id/nameEntryText"
            android:textSize="25sp">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="25sp"
            android:id="@+id/nameEntryInput"
            android:hint="@string/login_name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/nameEntryRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/idEntryRow">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_id"
            android:id="@+id/idEntryText"
            android:textSize="25sp">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="25sp"
            android:id="@+id/idEntryInput"
            android:hint="@string/login_id_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/adminEntryRow"
        android:layout_below="@+id/idEntryRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_admin"
            android:id="@+id/adminEntryText"
            android:textSize="25sp">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="25sp"
            android:id="@+id/adminEntryInput" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/locationEntryRow"
        android:layout_below="@+id/adminEntryRow"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_location"
            android:id="@+id/locationEntryText"
            android:textSize="25sp">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textSize="25sp"
            android:id="@+id/locationEntryInput"
            android:hint="@string/login_location_hint"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_note"
        android:id="@+id/noteTextView"
        android:textSize="20sp"
        android:layout_below="@+id/loginText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
