<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="arashincleric.com.spinner.FinalGameFragment"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/leftView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="7">

                <ImageView
                    android:id="@+id/leftWheel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="matrix" />

                <ImageView
                    android:id="@+id/pointerLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pointer"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/leftScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_above="@+id/leftSpinBtn"
                    android:layout_alignRight="@+id/leftSelectBtn"
                    android:layout_alignEnd="@+id/leftSelectBtn" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spin_btn"
                    android:id="@+id/leftSpinBtn"
                    android:layout_above="@+id/leftSelectBtn"
                    android:layout_centerHorizontal="true" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/select_btn"
                    android:textOn="@string/select_btn"
                    android:id="@+id/leftSelectBtn"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="7">

                <ImageView
                    android:id="@+id/rightWheel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="matrix" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pointer"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/rightScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/rightSelectBtn"
                    android:layout_alignStart="@+id/rightSelectBtn" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spin_btn"
                    android:id="@+id/rightSpinBtn"
                    android:layout_above="@+id/rightSelectBtn"
                    android:layout_centerHorizontal="true" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/select_btn"
                    android:textOn="@string/select_btn"
                    android:id="@+id/rightSelectBtn"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/confirm" />


</LinearLayout>
